--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -4,92 +4,134 @@
 
 <h3>SPARQL Endpoint</h3>
 
-<div ng-controller="ModalWindow">
-  <button type="button" class="btn btn-large btn-primary" 
-    ng-click="OpenTemplateWindow('partials/modals/endpoint.html')">Add new Endpoint</button>
+<div ng-controller="EndpointCtrl">
+  <div ng-controller="ModalWindow">
+    <button type="button" class="btn btn-large btn-primary" 
+      ng-click="new(); OpenWindow('modalEndpoint'); ">Add new Endpoint</button>
+    <div class="modal fade" id="modalEndpoint">
+      <div class="modal-header">
+        <button type="button" class="close" ng-click="close('modalEndpoint')" aria-hidden="true">&times;</button>
+        <h5 class="modal-title green bold">{{modaltitle}}</h5>
+      </div>
+      <div class="modal-body">
+        <form name="endpointForm" class="form-horizontal" role="form" novalidate>
+          <div class="form-group">
+            <label for="uri" class="col-lg-2 control-label">Identifier</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="identifier" id="identifier" placeholder="Identifier" ng-model="endpoint.uri" ng-disabled="!isNew()" required uri-name>
+              <div class="error"  ng-show="endpointForm.identifier.$dirty && endpointForm.identifier.$invalid">Invalid:
+                <span ng-show="endpointForm.identifier.$error.required">Specify a valid identifier</span>
+              </div>
+            </div>  
+          </div>
+          <div class="form-group">
+            <label for="label" class="col-lg-2 control-label">Label</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="label" id="label" placeholder="Label" ng-model="endpoint.label" required>
+              <div class="error"  ng-show="endpointForm.label.$dirty && endpointForm.label.$invalid">Invalid:
+                <span ng-show="endpointForm.label.$error.required">Specify a valid label</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="endpoint" class="col-lg-2 control-label">Endpoint</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="endpoint" id="endpoint" placeholder="Endpoint" ng-model="endpoint.endpoint" required url>
+               <div class="error"  ng-show="endpointForm.endpoint.$dirty && endpointForm.endpoint.$invalid">Invalid:
+                <span ng-show="endpointForm.endpoint.$error.required">Specify a valid endpoint</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="homepage" class="col-lg-2 control-label">Homepage</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="homepage" id="homepage" placeholder="Homepage" ng-model="endpoint.homepage" required url>
+               <div class="error"  ng-show="endpointForm.homepage.$dirty && endpointForm.homepage.$invalid">Invalid:
+                <span ng-show="endpointForm.homepage.$error.required">Specify a valid homepage</span>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn-sm btn-success" ng-click="save()" ng-disabled="endpointForm.$invalid || isUnchanged(endpoint)">Save</button>
+        <button type="button" class="btn-sm btn-default" ng-click="close('modalEndpoint')">Cancel</button>
+      </div>
+    </div><!-- /.modal -->
 
-  <div class="modal fade" id="modalWindow">
-    <div class="modal-header">
-      <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
-      <h5 class="modal-title green bold">Edit Endpoint</h5>
-    </div>
-    <div class="modal-body">
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn-sm btn-success" ng-click="close()">Save</button>
-      <button type="button" class="btn-sm btn-success" ng-click="close()">Cancel</button>
-    </div>   
-  </div><!-- /.modal -->
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Action</th>
+        <th>Label</th>
+        <th>Endpoint</th>
+        <th>Homepage</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="endpoint in endpoints">
+        <td>
+          <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{endpoint.uri}}')"><span class="glyphicon glyphicon-trash"></span></button>
+          <button type="button" class="btn btn-default btn-xs" ng-click="edit('{{endpoint.uri}}'); OpenWindow('modalEndpoint'); "><span class="glyphicon glyphicon-edit"></span></button>
+        </td>
+        <td>{{endpoint.label}}</td>
+        <td>{{endpoint.endpoint}}</td>
+        <td>{{endpoint.homepage}}</td>
+      </tr>
+    </tbody>
+    </table>
+  <!-- Modal Window -->
+  </div> 
+<!-- Controller -->
 </div>
-
-
-<table class="table table-striped">
-<thead>
-  <tr>
-    <th>Action</th>
-    <th>Description</th>
-    <th>url</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>
-      <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
-      <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-edit"></span></button>
-    </td>
-    <td>Dbpedia</td>
-    <td>http://dbpedia.org/sparql</td>
-  </tr>
-</tbody>
-</table>
-
 
 
 <h3>Relational Databases</h3>
 
-<div ng-controller="ModalWindow">
+<div ng-controller="DatabaseCtrl">
+  <div ng-controller="ModalWindow">
 
-  <button type="button" class="btn btn-large btn-primary" 
-    ng-click="OpenTemplateWindow('partials/modals/database.html')">Add new Database</button>
+    <button type="button" class="btn btn-large btn-primary" 
+      ng-click="OpenTemplateWindow('partials/modals/database.html','modalDatabase')">Add new Database</button>
 
-  <div class="modal fade" id="modalWindow">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h5 class="modal-title green bold">Edit Databases</h5>
-    </div>
-    <div class="modal-body"></div>
-    <div class="modal-footer">
-      <button type="button" class="btn-sm btn-success" data-dismiss="modal">Save</button>
-      <button type="button" class="btn-sm btn-success" data-dismiss="modal">Cancel</button>
-    </div>
-  </div><!-- /.modal -->
+    <div class="modal fade" id="modalDatabase">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close('modalDatabase')">&times;</button>
+        <h5 class="modal-title green bold">Edit Databases</h5>
+      </div>
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn-sm btn-success" data-dismiss="modal" ng-click="close('modalDatabase')">Save</button>
+        <button type="button" class="btn-sm btn-default" data-dismiss="modal" ng-click="close('modalDatabase')">Cancel</button>
+      </div>
+    </div><!-- /.modal -->
+  </div>
+
+  <table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Action</th>
+      <th>Description</th>
+      <th>Server</th>
+      <th>Database</th>
+      <th>Driver</th>
+      <th>User</th>
+      <th>Password</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
+        <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-edit"></span></button>
+      </td>
+      <td>Hotels MySQL</td>
+      <td>http://localhost/</td>
+      <td>test</td>
+      <td>MySQL</td>
+      <td>root</td>
+      <td>12345</td>
+    </tr>
+  </tbody>
+  </table>
 </div>
-
-<table class="table table-striped">
-<thead>
-  <tr>
-    <th>Action</th>
-    <th>Description</th>
-    <th>Server</th>
-    <th>Database</th>
-    <th>Driver</th>
-    <th>User</th>
-    <th>Password</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>
-      <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
-      <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-edit"></span></button>
-    </td>
-    <td>Hotels MySQL</td>
-    <td>http://localhost/</td>
-    <td>test</td>
-    <td>MySQL</td>
-    <td>root</td>
-    <td>12345</td>
-  </tr>
-</tbody>
-</table>
-
