--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -3,92 +3,97 @@
 
 <div ng-controller="GraphCtrl">
 
-<div ng-controller="ModalWindow">
-  <button type="button" class="btn btn-large btn-primary" ng-click="OpenWindow(); new()">Add new dataset</button>
+  <div ng-controller="ModalWindow">
+    <button type="button" class="btn btn-large btn-primary" ng-click="new(); OpenWindow('modelGraph');">Add new dataset</button>
 
-  <div class="modal fade" id="modalWindow">
-    <form name="graphForm" class="form-horizontal" role="form" novalidate>
-      <div class="modal-header">
-        <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
-        <h5 class="modal-title green bold">Edit Named Graph</h5>
-      </div>
+    <div class="modal fade" id="modelGraph">
+      <form name="graphForm" class="form-horizontal InputForm" role="form" novalidate>
+        <div class="modal-header">
+          <button type="button" class="close" ng-click="close('modelGraph')" aria-hidden="true">&times;</button>
+          <h5 class="modal-title green bold">{{modaltitle}}</h5>
+        </div>
 
-      <div class="modal-body">
-        <div class="form-group">
-          <label for="name" class="col-lg-2 control-label">Name</label>
-          <div class="col-lg-10">
-            <input type="text" class="form-control" id="label" name="label" placeholder="Name" ng-model="namedgraph.name" required />
-            <div class="error"  ng-show="graphForm.label.$dirty && graphForm.label.$invalid">Invalid:
-              <span ng-show="graphForm.label.$error.required">Specify a name</span>
+        <div class="modal-body">
+           <div class="form-group">
+            <label class="col-lg-2 control-label">Name</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="name" name="name" placeholder="Name" ng-model="namedgraph.name" required ng-disabled="!isNew()" uri-name />
+              <div class="error"  ng-show="graphForm.name.$dirty && graphForm.name.$invalid">Invalid:
+                <span ng-show="graphForm.name.$error.required">Specify a valid name</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="name" class="col-lg-2 control-label">Label</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="label" name="label" placeholder="Label" ng-model="namedgraph.graph.label" required />
+              <div class="error"  ng-show="graphForm.label.$dirty && graphForm.label.$invalid">Invalid:
+                <span ng-show="graphForm.label.$error.required">Specify a label</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="description" class="col-lg-2 control-label">Description</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="description" id="description" placeholder="Description" ng-model="namedgraph.graph.description" />
+              <div class="error"  ng-show="graphForm.description.$dirty && graphForm.description.$invalid">Invalid:
+                <span ng-show="graphForm.description.$error.required">Give a description</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Created</label>
+            <div class="col-lg-10">
+              <p class="form-control-static">{{namedgraph.graph.created}}</p>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Modified</label>
+            <div class="col-lg-10">
+              <p class="form-control-static">{{namedgraph.graph.modified}}</p>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">SPARQL Endpoint</label>
+            <div class="col-lg-10">
+              <p class="form-control-static">{{namedgraph.graph.endpoint}}</p>
             </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for="description" class="col-lg-2 control-label">Description</label>
-          <div class="col-lg-10">
-            <input type="text" class="form-control" name="description" id="description" placeholder="Description" ng-model="namedgraph.graph.description" />
-            <div class="error"  ng-show="graphForm.description.$dirty && graphForm.description.$invalid">Invalid:
-              <span ng-show="graphForm.description.$error.required">Give a description</span>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-2 control-label">Created</label>
-          <div class="col-lg-10">
-            <p class="form-control-static">{{namedgraph.graph.created}}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-2 control-label">Modified</label>
-          <div class="col-lg-10">
-            <p class="form-control-static">{{namedgraph.graph.modified}}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-2 control-label">SPARQL Endpoint</label>
-          <div class="col-lg-10">
-            <p class="form-control-static">{{namedgraph.graph.endpoint}}</p>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn-sm btn-success" ng-click="close()" ng-click="save()"
-        ng-disabled="graphForm.$invalid || isUnchanged(namedgraph)">Save</button>
-        <button type="button" class="btn-sm btn-default " ng-click="close()">Cancel</button>
-      </div>      
-    </form>
- 	</div>
+        <div class="modal-footer">
+          <button type="button" class="btn-sm btn-success" ng-click="save();"
+          ng-disabled="graphForm.$invalid || isUnchanged(namedgraph)">Save</button>
+          <button type="button" class="btn-sm btn-default" ng-click="close('modelGraph')">Cancel</button>
+        </div>      
+      </form>
+   	</div>
 
-<h3>Existing Graphs</h3>
+  <h3>Existing Graphs</h3>
 
-<table class="table table-striped">
-<thead>
-  <tr>
-    <th>Action</th>
-    <th>URI</th>
-    <th>title</th>
-    <th>description</th>
-    <th>contributor</th>
-    <th>source</th>
-    <th>created</th>
-    <th>modified</th>
-  </tr>
-</thead>
-<tbody>
-   <tr ng-repeat="namedgraph in namedgraphs">
-    <td>
-      <button type="button" class="btn btn-default btn-xs" ng-click="edit('{{namedgraph.name}}'); OpenWindow();"><span class="glyphicon glyphicon-edit"></span></button>
-      <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{namedgraph.name}}')"><span class="glyphicon glyphicon-trash"></span></button>
-    </td>
-    <td>{{namedgraph.name}}</td>
-    <td>{{namedgraph.graph.label}}</td>
-    <td>{{namedgraph.graph.description}}</td>
-    <td></td>
-    <td></td>
-    <td>{{namedgraph.graph.created}}</td>
-    <td>{{namedgraph.graph.modified}}</td>
-  </tr>
-</tbody>
-</table>
-</div><!-- /.modal -->
+  <table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Action</th>
+      <th>URI</th>
+      <th>Label</th>
+      <th>Description</th>
+      <th>Created</th>
+      <th>Modified</th>
+    </tr>
+  </thead>
+  <tbody>
+     <tr ng-repeat="namedgraph in namedgraphs">
+      <td>
+        <button type="button" class="btn btn-default btn-xs" ng-click="edit('{{namedgraph.name}}'); OpenWindow('modelGraph');"><span class="glyphicon glyphicon-edit"></span></button>
+        <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{namedgraph.name}}')"><span class="glyphicon glyphicon-trash"></span></button>
+      </td>
+      <td>{{namedgraph.name}}</td>
+      <td>{{namedgraph.graph.label}}</td>
+      <td>{{namedgraph.graph.description}}</td>
+      <td>{{namedgraph.graph.created}}</td>
+      <td>{{namedgraph.graph.modified}}</td>
+    </tr>
+  </tbody>
+  </table>
+  </div><!-- /.modal -->
 </div> <!-- controller div -->
