--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -22,7 +22,7 @@
 	</div>
 
 	  <div class="form-group">
-	  <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch Facete</a>
+	  <a class="btn btn-success btn-large" ng-click="OpenFullWindow()">Launch Facete</a>
 	  </div>
 	</form>
 	</div>
