--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -2,11 +2,11 @@
 <div class="row contents">
   	<div class="col-lg-2">
 			
-			<div class="panel-group">
-			  <div class="panel panel-default">
-				  <div class="panel-heading">
-					  <h5 class="panel-title">
-				        <a class="accordion-toggle" href="#/account">Account</a>
+			<div class="panel-group" id="accordion" ng-controller="AccountMenuCtrl">
+			  <div class="panel panel-default" ng-repeat="item in items">
+				  <div class="panel-heading" ng-controller="SidebarCtrl">
+					  <h5 ng-class="{selected:isSelected('{{item.url}}')}" class="panel-title">
+				        <a class="accordion-toggle" href="{{item.route}}">{{item.name}}</a>
 				      </h5>
 				  </div>
 			  	</div>
