--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -4,10 +4,13 @@
 
 <h3>SPARQL Endpoint</h3>
 
-<div ng-controller="EndpointCtrl">
-  <div ng-controller="ModalWindow">
+<div ng-controller="ModalWindow">
+
+  <div ng-controller="EndpointCtrl">
+
     <button type="button" class="btn btn-large btn-primary" 
       ng-click="new(); OpenWindow('modalEndpoint'); ">Add new Endpoint</button>
+
     <div class="modal fade" id="modalEndpoint">
       <div class="modal-header">
         <button type="button" class="close" ng-click="close('modalEndpoint')" aria-hidden="true">&times;</button>
@@ -18,9 +21,10 @@
           <div class="form-group">
             <label for="uri" class="col-lg-2 control-label">Identifier</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" name="identifier" id="identifier" placeholder="Identifier" ng-model="endpoint.uri" ng-disabled="!isNew()" required uri-name>
+              <input type="text" class="form-control" name="identifier" id="identifier" placeholder="Identifier" ng-model="endpoint.uri" ng-disabled="!isNew()" required regex-validate="identifier" unique-identifier>
               <div class="error"  ng-show="endpointForm.identifier.$dirty && endpointForm.identifier.$invalid">Invalid:
-                <span ng-show="endpointForm.identifier.$error.required">Specify a valid identifier</span>
+                <span ng-show="endpointForm.identifier.$error.required || endpointForm.identifier.$error.regexValidate">Specify a valid identifier (letters and or numbers)</span>
+                <span ng-show="endpointForm.identifier.$error.uniqueIdentifier">This identifier already exist</span>
               </div>
             </div>  
           </div>
@@ -36,18 +40,18 @@
           <div class="form-group">
             <label for="endpoint" class="col-lg-2 control-label">Endpoint</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" name="endpoint" id="endpoint" placeholder="Endpoint" ng-model="endpoint.endpoint" required url>
+              <input type="text" class="form-control" name="endpoint" id="endpoint" placeholder="Endpoint" ng-model="endpoint.endpoint" required regex-validate="sparqlEndpoint">
                <div class="error"  ng-show="endpointForm.endpoint.$dirty && endpointForm.endpoint.$invalid">Invalid:
-                <span ng-show="endpointForm.endpoint.$error.required">Specify a valid endpoint</span>
+                <span ng-show="endpointForm.endpoint.$error.required || endpointForm.endpoint.$error.regexValidate ">Specify a valid endpoint</span>
               </div>
             </div>
           </div>
           <div class="form-group">
             <label for="homepage" class="col-lg-2 control-label">Homepage</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" name="homepage" id="homepage" placeholder="Homepage" ng-model="endpoint.homepage" required url>
+              <input type="text" class="form-control" name="homepage" id="homepage" placeholder="Homepage" ng-model="endpoint.homepage" required regex-validate="url">
                <div class="error"  ng-show="endpointForm.homepage.$dirty && endpointForm.homepage.$invalid">Invalid:
-                <span ng-show="endpointForm.homepage.$error.required">Specify a valid homepage</span>
+                <span ng-show="endpointForm.homepage.$error.required || endpointForm.homepage.$error.regexValidate ">Specify a valid homepage</span>
               </div>
             </div>
           </div>
@@ -55,14 +59,15 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn-sm btn-success" ng-click="save()" ng-disabled="endpointForm.$invalid || isUnchanged(endpoint)">Save</button>
-        <button type="button" class="btn-sm btn-default" ng-click="close('modalEndpoint')">Cancel</button>
+        <button type="button" class="btn-sm btn-default" data-dismiss="modal" ng-click="close('modalEndpoint')">Cancel</button>
       </div>
-    </div><!-- /.modal -->
+    </div><!-- /.modal window -->
 
     <table class="table table-striped">
     <thead>
       <tr>
         <th>Action</th>
+        <th>Uri</th>
         <th>Label</th>
         <th>Endpoint</th>
         <th>Homepage</th>
@@ -74,64 +79,135 @@
           <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{endpoint.uri}}')"><span class="glyphicon glyphicon-trash"></span></button>
           <button type="button" class="btn btn-default btn-xs" ng-click="edit('{{endpoint.uri}}'); OpenWindow('modalEndpoint'); "><span class="glyphicon glyphicon-edit"></span></button>
         </td>
+        <td>{{endpoint.uri}}</td>
         <td>{{endpoint.label}}</td>
         <td>{{endpoint.endpoint}}</td>
         <td>{{endpoint.homepage}}</td>
       </tr>
     </tbody>
     </table>
-  <!-- Modal Window -->
-  </div> 
-<!-- Controller -->
-</div>
+  <!-- EndpointCtrl Controller -->
+  </div>
 
 
-<h3>Relational Databases</h3>
+  <h3>Relational Databases</h3>
 
-<div ng-controller="DatabaseCtrl">
-  <div ng-controller="ModalWindow">
+  <div ng-controller="DatabaseCtrl">
 
     <button type="button" class="btn btn-large btn-primary" 
-      ng-click="OpenTemplateWindow('partials/modals/database.html','modalDatabase')">Add new Database</button>
+      ng-click="new(); OpenWindow('modalDatabase');">Add new Database</button>
 
     <div class="modal fade" id="modalDatabase">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close('modalDatabase')">&times;</button>
-        <h5 class="modal-title green bold">Edit Databases</h5>
+        <h5 class="modal-title green bold">{{modaltitle}}</h5>
       </div>
-      <div class="modal-body"></div>
+      <div class="modal-body">
+        <form name="databaseForm" class="form-horizontal" role="form" novalidate>
+          <div class="form-group">
+            <label for="identifier" class="col-lg-2 control-label">Identifier</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="identifier" name="identifier" placeholder="Identifier" ng-model="database.uri" ng-disabled="!isNew()" required regex-validate="identifier" unique-identifier >
+              <div class="error"  ng-show="databaseForm.identifier.$dirty && databaseForm.identifier.$invalid">Invalid:
+                <span ng-show="databaseForm.identifier.$error.required || databaseForm.identifier.$error.regexValidate ">Specify a valid identifier (letters and or numbers)</span>
+                <span ng-show="databaseForm.identifier.$error.uniqueIdentifier">This identifier already exist</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="label" class="col-lg-2 control-label">Label</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="label" id="label" placeholder="Label" ng-model="database.label" required>
+              <div class="error"  ng-show="databaseForm.label.$dirty && databaseForm.label.$invalid">Invalid:
+                <span ng-show="databaseForm.label.$error.required">Specify a valid label</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="server" class="col-lg-2 control-label">Server</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="server" name="server" placeholder="Server" ng-model="database.server" required>
+              <div class="error"  ng-show="databaseForm.server.$dirty && databaseForm.server.$invalid">Invalid:
+                <span ng-show="databaseForm.server.$error.required">Specify a valid server</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="database" class="col-lg-2 control-label">Database Name</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="database" database="database" placeholder="Database" ng-model="database.database" required>
+              <div class="error"  ng-show="databaseForm.database.$dirty && databaseForm.database.$invalid">Invalid:
+                <span ng-show="databaseForm.database.$error.required">Specify a valid database name</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="driver" class="col-lg-2 control-label">Driver</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="driver" name="driver" placeholder="Driver" ng-model="database.driver" required>
+              <div class="error"  ng-show="databaseForm.driver.$dirty && databaseForm.driver.$invalid">Invalid:
+                <span ng-show="databaseForm.driver.$error.required">Specify a valid driver</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="user" class="col-lg-2 control-label">User</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="user" name="user" placeholder="User" ng-model="database.user" required>
+              <div class="error"  ng-show="databaseForm.user.$dirty && databaseForm.user.$invalid">Invalid:
+                <span ng-show="databaseForm.user.$error.required">Specify a valid user</span>
+              </div>
+            </div>
+          </div>
+                <div class="form-group">
+            <label for="password" class="col-lg-2 control-label">Password</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="password" name="password" placeholder="Password" ng-model="database.password" required>
+              <div class="error"  ng-show="databaseForm.password.$dirty && databaseForm.password.$invalid">Invalid:
+                <span ng-show="databaseForm.password.$error.required">Specify a valid password</span>
+              </div>
+            </div>
+          </div>
+        </form>
+
+      </div>
       <div class="modal-footer">
-        <button type="button" class="btn-sm btn-success" data-dismiss="modal" ng-click="close('modalDatabase')">Save</button>
+        <button type="button" class="btn-sm btn-success" ng-click="save()" ng-disabled="databaseForm.$invalid || isUnchanged(database)">Save</button>
         <button type="button" class="btn-sm btn-default" data-dismiss="modal" ng-click="close('modalDatabase')">Cancel</button>
       </div>
-    </div><!-- /.modal -->
+    </div>
+
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Action</th>
+        <th>Uri</th>
+        <th>Label</th>
+        <th>Server</th>
+        <th>Database</th>
+        <th>Driver</th>
+        <th>User</th>
+        <th>Password</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="database in databases">
+        <td>
+          <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{database.uri}}')"><span class="glyphicon glyphicon-trash"></span></button>
+          <button type="button" class="btn btn-default btn-xs" ng-click="edit('{{database.uri}}'); OpenWindow('modalDatabase');"><span class="glyphicon glyphicon-edit"></span></button>
+        </td>
+        <td>{{database.uri}}</td>
+        <td>{{database.label}}</td>
+        <td>{{database.server}}</td>
+        <td>{{database.database}}</td>
+        <td>{{database.driver}}</td>
+        <td>{{database.user}}</td>
+        <td>{{database.password}}</td>
+      </tr>
+    </tbody>
+    </table>
+  <!-- DatabaseCtrl Controller -->
   </div>
 
-  <table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Action</th>
-      <th>Description</th>
-      <th>Server</th>
-      <th>Database</th>
-      <th>Driver</th>
-      <th>User</th>
-      <th>Password</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
-        <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-edit"></span></button>
-      </td>
-      <td>Hotels MySQL</td>
-      <td>http://localhost/</td>
-      <td>test</td>
-      <td>MySQL</td>
-      <td>root</td>
-      <td>12345</td>
-    </tr>
-  </tbody>
-  </table>
-</div>
+<!-- Modal Controller -->
+</div> 
