--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -22,7 +22,7 @@
 	</div>
 
 	  <div class="form-group">
-	  <a class="btn btn-success btn-large" ng-click="OpenFullWindow()">Launch Facete</a>
+	  <a class="btn btn-success btn-large" ng-click="OpenFullWindow('modalWindow')">Launch Facete</a>
 	  </div>
 	</form>
 	</div>
@@ -31,7 +31,7 @@
   <div class="modal fade" id="modalWindow" ng-controller="FaceteFormCtrl">
     
         <div class="modal-header">
-          <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
+          <button type="button" class="close" ng-click="close('modalWindow')" aria-hidden="true">&times;</button>
           <h5 class="modal-title green bold">Facete</h5>
         </div>
         <div class="modal-body">
@@ -41,7 +41,7 @@
         <!--  http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri=http://localhost:8890/sparql&default-graph-uri=http://localhost/lod2democonfiguration -->
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn-sm btn-success" ng-click="close()">Close</button>
+          <button type="button" class="btn-sm btn-success" ng-click="close('modalWindow')">Close</button>
         </div>
         
   	</div><!-- /.modal -->
