Limes integration mostly finished, GeoLift started

--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -1,1 +1,321 @@
-geolift.html
+<div class="contents" ng-controller="LimesCtrl">
+	<h3 class="green bold">GeoLift</h3><div ng-show="configOptions">
+	<div class="row" ng-controller="ImportFormCtrl">
+			<label for="inputFile" class="col-xs-2 control-label">Upload a File</label>
+		    	<div class="col-xs-8">
+					  <!-- <input type="file" class="form-control" ng-file-select="onFileSelect($files)" > -->
+					    <input id="lefile" class="form-control input-sm" type="file" ng-file-select="loadLimesXML($files)" multiple name="fileName" accept=".xml" style="display:none">
+					  	<div class="error" ng-show="uploadedError()">Invalid:
+					  	<span>{{uploadMessage}}</span></div>
+						<div class="input-append">
+						<input id="dummyInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=lefile]').click();">
+						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();">Browse</a>
+						</div>
+			    </div>
+    </div>
+	<div class="row">
+					  <script type="text/javascript">
+						$('input[id=lefile]').change(function() {
+						$('#dummyInput').val($(this).val());
+						});
+					  </script>
+					  <div class="error" ng-show="uploadedError()">Invalid:
+	          	      <span>{{uploadMessage}}</span>
+		  		      </div>
+	  </div>
+	  <br>
+	
+	<div class="row">
+			<div class="col-xs-2">
+			<label for="Example">Examples</label>
+			</div>
+			<div class="col-xs-8">
+			<select id="Example" class="form-control input-sm" ng-model="Example" ng-options="example.name for example in examples" ng-change="FillForm(Example.name)">
+			 <option value="">Choose an example</option>
+			</select>
+			</div>
+	  </div>
+	  <br>
+
+	<div class="row">
+			<div class="col-xs-2">
+				<label for="showConfig">Options Form</label>
+		    </div>
+		    <div class="col-xs-2">
+				<a class="btn btn-sm btn-success btn-block" id="showConfig" ng-model="limes.showConfig" ng-click="enterConfig = !enterConfig">Show Form</a>
+	  		</div>
+	</div>
+	<br>
+	<br>
+	</div>
+	<b>Framework to enrich geographic content in the Semantic Web</b>
+	<br>
+	<br>
+	<p>To get started either upload a configuration file, choose an example, or fill in the options form.</p>
+	
+<form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
+	<div class="row">
+		<div class="col-xs-12">
+		<h5 class="green bold">Options</h5>
+		</div>
+	</div>
+	<br>
+	
+	<div id="limesOptions" ng-model="limes.Options" ng-show="enterConfig">
+	<div class="row">
+		<div class="col-xs-12">
+		<h5 class="green bold">LIMES Configuration</h5>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+	<div class="col-xs-6">
+		<h5 class="green bold">Source Data</h5>
+	</div>
+	<div class="col-xs-6">
+		<h5 class="green bold">Target Data</h5>
+	</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceServiceURI">Endpoint URL</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceServiceURI" ng-model="limes.SourceServiceURI"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetServiceURI">Endpoint URL</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetServiceURI" ng-model="limes.TargetServiceURI"></input>
+	    </div>
+	</div>
+	<br>
+	<!-- 
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceGraph">Graph</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceGraph" ng-model="SourceGraph"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetGraph">Graph</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetGraph" ng-model="TargetGraph"></input>
+	    </div>
+	</div>
+	<br>
+	 -->
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceVar">Variable</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceVar" ng-model="limes.SourceVar"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetVar">Variable</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetVar" ng-model="limes.TargetVar"></input>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceSize">Pagesize</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceSize" ng-model="limes.SourceSize"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetSize">Pagesize</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetSize" ng-model="limes.TargetSize"></input>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceRestr">Restriction</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <textarea class="form-control input-sm" id="SourceRestr" ng-model="limes.SourceRestr"></textarea>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetRestr">Restriction</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <textarea class="form-control input-sm" id="TargetRestr" ng-model="limes.TargetRestr"></textarea>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceProp">Property</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceProp" ng-model="limes.SourceProp"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetProp">Property</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetProp" ng-model="limes.TargetProp"></input>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="Metric">Metric</label>
+	    </div>
+	    <div class="col-xs-10">
+	    <input class="form-control input-sm" id="Metric" ng-model="limes.Metric"></input>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="OutputFormat">Output Format</label>
+	    </div>
+	    <div class="col-xs-10">
+	    <select class="form-control input-sm" id="OutputFormat" ng-options="option as option.output for option in options[0].output" 
+	    ng-model="limes.OutputFormat"></select>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="ExecType">Execution</label>
+	    </div>
+	    <div class="col-xs-10">
+	    <select class="form-control input-sm" id="ExecType" ng-options="option as option.execType for option in options[1].execType"
+	    ng-model="limes.ExecType"></select>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+	<div class="col-xs-6">
+		<h5 class="green bold">Acceptance Settings</h5>
+	</div>
+	<div class="col-xs-6">
+		<h5 class="green bold">Review Settings</h5>
+	</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="AcceptThresh">Threshold</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="AcceptThresh" ng-model="limes.AcceptThresh"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="ReviewThresh">Threshold</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="ReviewThresh" ng-model="limes.ReviewThresh"></input>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="AcceptRelation">Relation</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="AcceptRelation" ng-model="limes.AcceptRelation"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="ReviewRelation">Relation</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="ReviewRelation" ng-model="limes.ReviewRelation"></input>
+	    </div>
+	</div>
+	<br>
+	</div>
+	<div class="row">
+		<div class="col-xs-2"></div>
+		<div class="col-xs-2">
+		  <a class="btn btn-sm btn-primary btn-block" id="startLimes" ng-show="startLimes" ng-click="StartLimes()">Start LIMES</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-2" ng-show="showProgress">
+		<b>This might take a while...</b>
+		</div>
+		<div class="col-xs-8">
+		<div class="progress progress-striped active" ng-show="showProgress">
+		<div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+		</div>
+		</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-2" ng-show="startReview">
+		<b>Processing complete!</b
+		></div>
+		<div class="col-xs-2">
+		  <a class="btn btn-sm btn-success btn-block" id="reviewLimes" ng-show="startReview" ng-click="ReviewLimes()">Review Results</a>
+		</div>
+	</div>
+</form>
+	
+<form class="form-horizontal InputForm col-xs-11" role="form" ng-show="reviewForm">
+	<div class="row">
+		<h5 class="green bold">Results</h5>
+	</div>
+	<br>
+	<div class="row">
+	    <label for="ReviewResults">Results for review</label>
+	    <textarea class="form-control" id="ReviewResults" ng-model="limes.reviewResults"></textarea>
+	</div>
+	<br>
+	<div class="row">
+	    <label for="AcceptedResults">Accepted Results</label>
+	    <textarea class="form-control" id="AcceptedResults" ng-model="limes.acceptedResults"></textarea>
+	</div>
+</form>
+	
+</div>
+
+<!-- 
+<div ng-controller="ModalWindow">
+    <a data-toggle="modal" href="#modalWindow" class="btn btn-primary btn-large" ng-click="open()">Launch demo modal</a>
+    <div id="modalWindow" class="modal">
+        <div class="modal-header">
+            <h4>LIMES</h4>
+        </div>
+        <div class="modal-body">
+            <iframe id="ow-frame" src="http://139.18.2.136:8080/SAIM"></iframe>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-warning cancel" ng-click="close()">Close</button>
+        </div>
+    </div>
+</div>
+
+<div ng-controller="ModalWindow">
+	<h3 class="green bold">LIMES - SAIM</h3>
+    <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch LIMES</a>
+
+  <!-- Modal -->
+  <!--  
+  <div class="modal fade" id="modalWindow">
+        <div class="modal-header">
+          <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
+          <h5 class="modal-title green bold">LIMES - SAIM</h5>
+        </div>
+        <div class="modal-body">
+        <iframe id="mod-frame" src="http://139.18.2.136:8080/SAIM"></iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn-sm btn-success" ng-click="close()">Close</button>
+        </div>
+  </div>
+  </div>
+   -->
